--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>Leader-board</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/all.css">
+    
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header class="">
         <nav class="navbar navbar-dark bg-primary navbar-expand-md">
             <div class="container">
-              <a class="navbar-brand" href="#"><img class="barnd-logo" src="images/icons/logo.png" alt=""><span>ldea</a></span>
+              <a class="navbar-brand" href="#"><img class="barnd-logo" src="images/icons/logo.png" alt=""><span style=" margin-top: 10px;">ldea</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></samp></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                  <ul class="navbar-nav">
@@ -102,16 +105,57 @@
                 </div>
             </div>
         </div>
-
         </section>
     </main>
 
-
-
+         <section class="background">
+             <h1 style="margin-left: 29px; color: #562EFF; font-size: 24px; margin-top: 30px;">Lates Course</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card">
+                    <img src="images/courses/course-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h3  style="font-size: 19.0336px; font-weight: 500; color: #1E1E1E; margin-top: 10px; margin-left: 8px;">React - The Complete</h3>
+                      <h3  style="font-size: 20.0336px; font-weight: 500; color: #1E1E1E; margin-left: 8px; margin-top: 5px;">Guide 2022</h3>
+                      <p style="margin-left: 10px; color: #ED6B4F; font-size: 14.6913px; line-height: 17px;">Reed Krakoff.</p>
+                      <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: #ebebeb;"></i><span style="color: #aeaeae;">4.5</span>
+                    </div>
+                        <button class="btn btn-mx d-flex align-items-center">
+                            <span style="font-weight: 600; font-size: 16.6913px; line-height: 20px; margin-left: 8px; color: #ff4a60;">01:30hr</span>
+                          </button>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/courses/course-2.png" class="card-img-top" style="margin-left: 10px;" alt="...">
+                    <div class="card-body">
+                        <h3 style="font-size: 20.0336px; font-weight: 500; color: #1E1E1E; margin-top: 10px; margin-left: 8px;">Powerpoint 2022</h3>
+                        <h3 style="font-size: 17.0336px; font-weight: 500; color: #1E1E1E; margin-left: 8px; margin-top: 5px">Master Powerpoint Cour</h3>
+                        <p style="margin-left: 10px; color: #ED6B4F; font-size: 14.6913px; line-height: 17px;">Walter Scott</p>
+                        <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"  style="color: #ebebeb;"></i><span style="color: #aeaeae;">4.5</span>
+                    </div>
+                    <button class="btn btn-mx d-flex align-items-center">
+                        <span style="font-weight: 600; font-size: 16.6913px; line-height: 20px; margin-left: 8px; color: #ed6b4f; background-color: #fee5df;">01:30hr</span>
+                      </button>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/courses/course-3.png" class="card-img-top" style="margin-left: 5px;" alt="...">
+                    <div class="card-body">
+                        <h3 style="font-size: 17.0336px; font-weight: 500; color: #1E1E1E; margin-top: 10px;">The Complete JavaScript</h3>
+                        <h3 style="font-size: 20.0336px; font-weight: 400; color: #1E1E1E; margin-top: 5px">Course 2022</h3>
+                        <p style="color: #ED6B4F; font-size: 14.6913px; line-height: 17px;">Walter Scott</p>
+                        <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"  style="color: #ebebeb;"></i><span style="color: #aeaeae;">4.5</span>
+                    </div>
+                    <button class="btn btn-mx d-flex align-items-center">
+                        <span style="font-weight: 600; font-size: 16.6913px; line-height: 20px; margin-left: 8px; color: #ff4a60;">01:30hr</span>
+                      </button>
+                    </div>
+                </div>
+              </div>
+         </section>
     
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
